# survey_ocr

./: README.md
easy-ocr/: README.md  pyproject.toml
easy-ocr/src/: main.py
